# simple-secure-channel

./: .gitignore  readme.md  simple-secure-channel.cabal
apps/: accountClient.hs  accountStore.hs  jtunnel.hs  testClient.hs  testService.hs
lib/Crypto/Mode/: EAX.hs
lib/Crypto/Protocol/: JPAKE.hs  SecureChannel.hs
lib/Crypto/Protocol/JPAKE/: Groups.hs
lib/Crypto/Protocol/SecureChannel/: KeyExchange.hs  Simple.hs
lib/Crypto/Util/: ConstantTime.hs  CredentialsProvider.hs  Encoding.hs
lib/Network/: TCPServer.hs
lib/Network/AAA/: Protocol.hs
